Connect with user service

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
+PORT=3001
+
 DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
@@ -8,3 +10,6 @@ DB_DATABASE=user_db
 DB_ADMIN_PORT=5050
 DB_ADMIN_USERNAME=admin@example.com
 DB_ADMIN_PASSWORD=admin
+
+USER_SERVICE_API=http://localhost:3000/users
+USER_SERVICE_API_KEY=dev_api_key_@_123
